Removed List.getFirst and getLast, unsupported in older Java